--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ teach me Javascript plx
 	<title>BibTeX Online Converter</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Convert your BibTeX bibliographies into text on the fly. Supports APA, MLA, Chicago, Harvard and Vancouver formats">
 	<!--===============================================================================================-->
 	<link rel="icon"
 		href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/whatsapp/224/robot-face_1f916.png" />
