--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ teach me Javascript plx
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Convert your BibTeX bibliographies into text on the fly. Supports APA, MLA, Chicago, Harvard and Vancouver formats">
+	<meta property="og:title" content="Bibtex Online Converter">
+	<meta property="og:url" content="https://bibtex.online">
 	<!--===============================================================================================-->
 	<link rel="icon"
 		href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/whatsapp/224/robot-face_1f916.png" />
@@ -56,10 +58,10 @@ teach me Javascript plx
 
 			<form class="contact100-form validate-form">
 
-				<span class="contact100-form-title">
+				<h1 class="contact100-form-title">
 					BibTeX Online Converter
-				</span>
-				<p class="description">Convert your BibTeX bibliographies into text on the fly 🚀</p>
+				</h1>
+				<h2 class="description">Convert your BibTeX bibliographies into text on the fly 🚀</h2>
 
 				<div class="wrap-input100 validate-input" data-validate="Sorry, we can't read your BibTeX!">
 					<span class="label-input100">Insert BibTeX here:</span>
@@ -108,6 +110,7 @@ teach me Javascript plx
 	</div>
 	<p class="footer"><a href="https://bibtex.online">BibTeX Online Converter</a> • <a
 			href="mailto:hi@bibtex.online">Contact</a> • <a href="mailto:feedback@bibtex.online">Feedback</a></p>
+	<link rel="canonical" href="https://bibtex.online">
 
 
 	<div id="dropDownSelect1"></div>
