add deobfuscated code

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ teach me Javascript plx
 				<div>
 					<span class="label-input100">Result:</span>
 					<div id="todiv"></div>
+					<br>
 					<div class="ctooltip">
 						<button type="button" class="copy-button" onclick="copyFunction()" onmouseout="outFunc()">
 							<span class="ctooltiptext" id="mycTooltip">Copy to clipboard</span>
@@ -117,7 +118,7 @@ teach me Javascript plx
 
 	<script src="js/BibTex.js"></script>
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<script src="js/core.js"></script>
+	<script src="js/core.deobfuscated.js"></script>
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 	<script src="vendor/select2/select2.min.js"></script>
