--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ teach me Javascript plx
 
 	<script src="js/BibTex.js"></script>
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<script src="js/core.deobfuscated.js"></script>
+	<script src="js/core.js"></script>
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 	<script src="vendor/select2/select2.min.js"></script>
