--- a/index.html
+++ b/index.html
@@ -1,20 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- 
-		,.
-		(_|,.
-	   ,' /, )_______   _
-	__j o``-'        `.'-)'
-   (")                 \'
-	`-j                |
-	  `-._(           /
-         |_\  |--^.  /
-		/_]'|_| /_)_/
-		   /_]'  /_]'
-teach me Javascript plx
-		    -->
-
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149266625-1"></script>
@@ -47,6 +33,9 @@ teach me Javascript plx
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/copy.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
+
 
 </head>
 
@@ -61,6 +50,10 @@ teach me Javascript plx
 				<h1 class="contact100-form-title">
 					BibTeX Online Converter
 				</h1>
+				<a class="contact100-form-subtitle"
+				href="https://github.com/enric1994/bibtexonline">
+					OPEN SOURCE NOW!
+				</a>
 				<h2 class="description">Convert your BibTeX bibliographies into text on the fly 🚀</h2>
 
 				<div class="wrap-input100 validate-input" data-validate="Sorry, we can't read your BibTeX!">
@@ -110,7 +103,8 @@ teach me Javascript plx
 		</div>
 	</div>
 	<p class="footer"><a href="https://bibtex.online">BibTeX Online Converter</a> • <a
-			href="mailto:hi@bibtex.online">Contact</a> • <a href="mailto:feedback@bibtex.online">Feedback</a></p>
+			href="mailto:hi@bibtex.online">Contact</a> • <a href="mailto:feedback@bibtex.online">Feedback</a>
+			• <a href="https://github.com/enric1994/bibtexonline">Contribute</a></p>
 	<link rel="canonical" href="https://bibtex.online">
 
 
@@ -135,6 +129,8 @@ teach me Javascript plx
 		data-moreinfo="https://en.wikipedia.org/wiki/HTTP_cookie" data-divlinkbg="#595959"
 		data-cookie="CookieInfoScript" data-close-text="🍪👍" data-font-family="Poppins-Medium">
 		</script>
+
+	<a class="github-fork-ribbon" href="https://github.com/enric1994/bibtexonline" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 </body>
 
 </html>
