Implemented populating of form fields using url params

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 	<script src="js/BibTex.js"></script>
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 	<script src="js/core.js"></script>
+	<script src="js/populateURLParams.js"></script>
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 	<script src="vendor/select2/select2.min.js"></script>
