--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 						<select class="selection-2" id="format" onchange="convert()">
 							<option value="apa">APA</option>
 							<option value="mla">MLA</option>
+							<option value="ieee">IEEE</option>
 							<option value="chicago">Chicago</option>
 							<option value="harvard">Harvard</option>
 							<option value="vancouver">Vancouver</option>
